<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySchedule">

    <View
        android:layout_width="match_parent"
        android:layout_height="400dp"/>

    <Button
        android:id="@+id/schedule_todo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_do" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule" />

    <Button
        android:id="@+id/schedule_set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup" />

</LinearLayout>